[gd_scene load_steps=4 format=3 uid="uid://c8ormsxg73v8w"]

[ext_resource type="Theme" uid="uid://cawujxjmphy63" path="res://main_theme.tres" id="1_raveu"]
[ext_resource type="Script" path="res://scenes/ui/menu_button.gd" id="1_s1hya"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_3q7ag"]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(65, 6)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -3.0
offset_right = 32.5
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_raveu")
script = ExtResource("1_s1hya")

[node name="ButtonText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_raveu")
bbcode_enabled = true
text = "[center] BUTTON [/center]"

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(7.5, 2)
rotation = 1.5708
scale = Vector2(0.6, 0.4)
texture = ExtResource("2_3q7ag")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
